substrate/frame/support/test/tests/benchmark_ui/unrecognized_option.stderr
error: expected `extra` or `skip_meta`
  --> tests/benchmark_ui/unrecognized_option.rs:26:32
   |
26 |     #[benchmark(skip_meta, extra, bad)]
   |                                   ^^^
